refactor(landing): :recycle: change astro nomenclature

--- a/apps/landing/src/pages/index.astro
+++ b/apps/landing/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
-import BaseLayout from "../layouts/base-layout.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
+
 ---
 
 <BaseLayout>
-	<main class="grid place-items-center h-screen">
+	<main class="grid place-items-center h-svh">
 			<img src="/images/logo-color.svg" alt="El Lector Novato" class="w-[300px] md:w-[500px]" />
 	</main>
 </BaseLayout>
