--- a/apps/landing/src/components/Card.astro
+++ b/apps/landing/src/components/Card.astro
@@ -21,41 +21,24 @@ const { href, title, body } = Astro.props;
 </li>
 <style>
 	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 1px;
-		background-color: #23262d;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 7px;
-		background-position: 100%;
+		@apply list-none flex p-[1px] bg-primary-900 bg-none bg-[length:400%] rounded-[7px] bg-[100%] shadow-[inset_0_0_0_1px_rgba(255,255,255,0.1)];
 		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
 	}
 	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
-		color: white;
-		background-color: #23262d;
-		opacity: 0.8;
+		@apply w-full no-underline leading-[1.4] p-[calc(1.5rem-1px)] rounded-lg text-white bg-[#23262d] opacity-80;
 	}
 	h2 {
-		margin: 0;
-		font-size: 1.25rem;
+		@apply m-0 text-xl;
 		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 	}
 	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
+		@apply mt-2 mb-0;
 	}
 	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
+		@apply bg-[0];
+		@apply bg-gradient-to-r from-cyan-500 to-blue-500;
 	}
 	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent-light));
+		@apply text-primary;
 	}
 </style>
