--- a/apps/landing/src/layouts/LegalLayout.astro
+++ b/apps/landing/src/layouts/LegalLayout.astro
@@ -16,36 +16,12 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<main>
+		<main class="mx-auto p-4 w-[800px] max-w-[calc(100%-2rem)] text-xl leading-relaxed">
 			<slot />
 		</main>
 	</body>
 </html>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #e1e5ed;
-		color: #13151a;
-	}
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		font-size: 20px;
-		line-height: 1.6;
-	}
 	h1 {
 		font-size: 4rem;
 		font-weight: 700;
@@ -53,7 +29,6 @@ const { title } = Astro.props;
 		text-align: center;
 		margin-bottom: 1em;
 	}
-
 	p {
 		margin-bottom: 1em;
 		text-align: justify;
@@ -61,19 +36,10 @@ const { title } = Astro.props;
 	li {
 		margin-bottom: 0.5em;
 	}
-
 	ul {
 		padding-left: 2em;
 		margin-bottom: 1em;
 		list-style-type: disc;
-	}
-
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
 	}
 	.link-card-grid {
 		display: grid;
